# tests

./: .gitignore  README.md
learn-kotlin/: Guardfile  build.gradle  settings.gradle
test-Dispatch/: build.sbt
test-akka-scala/: build.sbt
test-amqp-ruby/: README.md  receive.rb  send.rb
test-armeria-thrift/: Rakefile  build.gradle  settings.gradle
test-avospush/: README.md  pom.xml
test-buildr/: README.md  buildfile
test-cassandra/: README.md  project.clj
test-compojure/: .gitignore  README.md  project.clj  run.sh
test-crystal/: a.cr  and_or.cr  array_test.cr  assignment.cr  benchmark.cr  block_proc.cr  c.cr  case.cr  char_test.cr  class_test.cr  constants.cr  d.cr  enums.cr  generic.cr  generics.cr  global_variables.cr  hash_test.cr  if.cr  local_variables.cr  macros.cr  macros_2.cr  proc_test.cr  range_test.cr  reference_test.cr  regex_test.cr  sha1_hex.cr  string_test.cr  structs.cr  symbol_test.cr  tuple_test.cr  typeof.cr  underscores.cr  util.cr  while.cr
test-crystal-httpserver/: .gitignore  README.md  Rakefile
test-crystal-json/: .gitignore  README.md  Rakefile
test-crystal-redis/: .gitignore  Projectfile  Rakefile
test-cuba/: Gemfile  Rakefile  app.rb  config.ru
test-curl-rust/: Cargo.toml  README.md
test-elixir/: system.exs
test-elixir-mix-otp/: mix.exs
test-elixirs/test_rustler_ex/native/test_fib/: Cargo.toml  README.md
test-elixirs/test_rustler_ex/native/test_fib/src/: lib.rs.in
test-elm/: .gitignore  README.md  helloworld.elm  welcome.elm
test-elm-counter/: Counter.elm  elm-package.json
test-elm-option/: elm-package.json
test-erlang/: .gitignore  qsort.erl
test-fasthttp/: .gitignore  Rakefile
test-frank/: .gitignore  Rakefile
test-frege-native/: .gitignore  Rakefile
test-gradle-groovy/: .gitignore  build.gradle  settings.gradle
test-gradle-jruby/: .gitignore  README.md  build.gradle
test-guice/: build.sbt
test-handlebars.java/: build.sbt
test-hazelcast/: README.md  build.sbt  run.sh
test-hex-class/: build.sbt
test-idris/: .gitignore  Rakefile  main.idr
test-iron/: Cargo.toml
test-jackson-module-scala/: build.sbt
test-java-exec/: .gitignore  build.sbt
test-java-serializable/: .gitignore
test-jmh-logger/: .cache-main  .gitignore  README.md  build.sbt
test-kafka/: Rakefile
test-kemal-cr/: LICENSE
test-kobalt/: .gitignore
test-kovenant-kt/: build.gradle  settings.gradle
test-mio-echo/: Cargo.toml
test-mqtt/: .gitignore  (+2 more)
test-pythons/string-sum-rust/: .gitignore  Cargo.toml  run.sh  test.py  test.spec
test-pythons/string-sum-rust/src/: lib.rs
test-reasons/test-quicksort/: Makefile  test.opam
test-reasons/test-quicksort/lib/: Main.re  Test.re
test-rusts/test-futures/: Cargo.toml
test-rusts/test-futures/src/: main.rs
test-rusts/test-sqlx/: Cargo.toml
test-rusts/test-sqlx/src/: main.rs
(+1606 files in other folders)
