[package]
name = "test-sqlx"
version = "0.1.0"
authors = ["itang <live.tang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version ="0.2.5", features = ["mysql", "chrono"]}
async-std = { version = "1.5.0", features = ["attributes"] }
env_logger = "0.7.1"
chrono = "0.4.10"
anyhow = "1.0.26"
